# TTRL

./: .gitignore  .pre-commit-config.yaml  README.md  generate_variants.py  job.yaml  main.py  pyproject.toml  ttrl.py  utils.py
configs/: exp1.yaml  test.yaml
data/: format_for_ttrl.py
formatted_dataset_27/: variants_q0.json  variants_q0.parquet  variants_q1.json  variants_q1.parquet  variants_q10.json  variants_q10.parquet  variants_q11.json  variants_q11.parquet  variants_q12.json  variants_q12.parquet  variants_q13.json  variants_q13.parquet  variants_q14.json  variants_q14.parquet  variants_q15.json  variants_q15.parquet  variants_q16.json  variants_q16.parquet  variants_q17.json  variants_q17.parquet  variants_q18.json  variants_q18.parquet  variants_q19.json  variants_q19.parquet  variants_q2.json  variants_q2.parquet  variants_q20.json  variants_q20.parquet  variants_q21.json  variants_q21.parquet  variants_q22.json  variants_q22.parquet  variants_q23.json  variants_q23.parquet  variants_q24.json  variants_q24.parquet  variants_q25.json  variants_q25.parquet  variants_q26.json  variants_q26.parquet  (+14 more)
legacy/: format_for_ttrl.py  generate_variants.py  integration_numeric.py  llm_judge_utils.py  math_utils.py  ttrl.py  utils.py
raw_dataset_27/: description.py  desription.txt  format_for_ttrl.py  ttrl27.json
raw_dataset_27/question_0mYRQLIG/: train.json
raw_dataset_27/question_1/: test.json
raw_dataset_27/question_5Mn9vEVb/: test.json  train.json
raw_dataset_27/question_5ogqBHJ7/: train.json
raw_dataset_27/question_5ul3Y0gn/: test.json  train.json
raw_dataset_27/question_AuNI5E4k/: test.json
raw_dataset_27/question_F7pKZDt3/: test.json
raw_dataset_27/question_Jl0gLrFH/: test.json
raw_dataset_27/question_LoMt8vwp/: test.json  (+1 more)
reward/: self_reward.py  utils.py
test_trees/: description.py  description.txt  format_for_ttrl.py
utils/: misc.py
variant_results/: description.py  desription.txt  format_base_questions.py  format_data.py
(+41 files in other folders)
