[project]
name = "TTRL"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hydra-core>=1.3.2",
    "polars>=1.26.0",
    "python-dotenv>=1.1.0",
    "together>=1.5.5",
    "wandb>=0.19.9",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "flash-attn==2.7.4.post1",
    "flashinfer-python==0.2.5",
    "sgl-kernel==0.1.3+cu128",
    "sglang[blackwell]==0.4.6.post4",
    "verl[sglang]",
    "hf-xet>=1.1.2",
    "scikit-learn>=1.7.0",
    "sympy>=1.14.0",
    "mpmath>=1.3.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.28.4",
    "black>=25.1.0",
    "ipdb>=0.13.13",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
]

[tool.uv]
no-build-isolation-package = ["flash-attn"]
# NOTE: This is hack.
override-dependencies = ["sgl-kernel==0.1.3+cu128"]

[[tool.uv.index]]
name = "kev-builds"
url = "/mnt/artifacts/kev_builds/"
format = "flat"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "sgl-kernel-cu128"
url = "https://docs.sglang.ai/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128", marker = "sys_platform == 'linux'" }
torchaudio = { index = "pytorch-cu128", marker = "sys_platform == 'linux'" }
torchvision = { index = "pytorch-cu128", marker = "sys_platform == 'linux'" }
sgl-kernel = {index = "sgl-kernel-cu128"}
flash-attn = {index = "kev-builds"}
flashinfer-python = {index = "kev-builds"}
verl = { git = "https://github.com/Tufalabs/verl.git", branch = "clean-logs-sgl" }

[tool.black]
line-length = 88
preview = true
enable-unstable-feature = ['string_processing']

[tool.isort]
profile = "black"
force_single_line = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v"
